# pygridfit

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
notebooks/: example.ipynb
pygridfit/: gridfit.py  interpolation.py  regularizers.py  solvers.py  utils.py
tests/: README.md  generate_synth_references.m  test_gridfit.py
tests/data/: bluff_data.mat  input.mat  output.mat  synth_references.mat
