[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pygridfit"
version = "0.1.7"
description = "Python Port of gridfit (John D'Errico, 2006)"
authors = []
requires-python = ">=3.10.0"
dependencies = [
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pytest>=8.3.5",
    "scipy>=1.13.2",
    "watermark>=2.5.0",
]
readme = {file = "README.md", content-type = "text/markdown"}

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "twine", 
    "maturin",
]
scikit-sparse = [
    "scikit-sparse>=0.5.0",
]

[tool.setuptools]
packages = {find = {}}
include-package-data = true

